Bug 433431 - System Monitor crashes on close if custom page is open
Summary: System Monitor crashes on close if custom page is open
Status: RESOLVED FIXED
Alias: None
Product: plasma-systemmonitor
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR crash
Target Milestone: ---
Assignee: KSysGuard Developers
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2021-02-22 16:06 UTC by jz23
Modified: 2021-03-03 20:59 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.21.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description jz23 2021-02-22 16:06:36 UTC
Application: plasma-systemmonitor (5.21.0)

Qt Version: 5.15.2
Frameworks Version: 5.79.0
Operating System: Linux 5.10.16-1-default x86_64
Windowing System: X11
Drkonqi Version: 5.21.0
Distribution: "openSUSE Tumbleweed"

-- Information about the crash:
When an user created page is displayed in System Monitor while closing, System Monitor crashes. This happens no matter whether the page was modified in this session or not.

The crash can be reproduced every time.

-- Backtrace:
Application: Systemmonitor (plasma-systemmonitor), signal: Segmentation fault

[KCrash Handler]
#4  0x00007f1ba1213db6 in QListData::begin (this=<optimized out>, this=<optimized out>) at /usr/include/qt5/QtCore/qlist.h:118
#5  QList<KConfigSkeletonItem*>::constBegin (this=<optimized out>) at /usr/include/qt5/QtCore/qlist.h:341
#6  KCoreConfigSkeleton::isSaveNeeded (this=0x0) at /usr/src/debug/kconfig-5.79.0-1.1.x86_64/src/core/kcoreconfigskeleton.cpp:1264
#7  0x00007f1b8ba0b6bf in KSysGuard::SensorFaceController::~SensorFaceController (this=<optimized out>, this=<optimized out>) at /usr/src/debug/libksysguard5-5.21.0-1.1.x86_64/faces/SensorFaceController.cpp:395
#8  0x00007f1b8ba0b719 in KSysGuard::SensorFaceController::~SensorFaceController (this=<optimized out>, this=<optimized out>) at /usr/src/debug/libksysguard5-5.21.0-1.1.x86_64/faces/SensorFaceController.cpp:399
#9  0x00007f1ba0007f3e in QObjectPrivate::deleteChildren (this=0x55f6283eff30) at kernel/qobject.cpp:2104
#10 0x00007f1ba0012b54 in QObject::~QObject (this=<optimized out>, __in_chrg=<optimized out>) at kernel/qobject.cpp:1082
#11 0x000055f627967f80 in main (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/plasma5-systemmonitor-5.21.0-1.1.x86_64/src/main.cpp:117
[Inferior 1 (process 15814) detached]

Reported using DrKonqi
Comment 1 Bug Janitor Service 2021-02-23 09:12:23 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/libksysguard/-/merge_requests/124
Comment 2 David Redondo 2021-02-23 10:08:08 UTC
Git commit 34eb6ce9b6c411107f9ccb843807176e80c80268 by David Redondo.
Committed on 23/02/2021 at 10:07.
Pushed by davidre into branch 'master'.

Guard against null configloader in destructor

We do not necessarily have a config loader (invalid id or when the face does
not have any config options).
FIXED-IN:5.21.1

M  +1    -1    faces/SensorFaceController.cpp

https://invent.kde.org/plasma/libksysguard/commit/34eb6ce9b6c411107f9ccb843807176e80c80268
Comment 3 David Redondo 2021-02-23 10:08:39 UTC
Git commit b3fd4f2f3a4904d4c64168bff8b427c221d7fab1 by David Redondo.
Committed on 23/02/2021 at 10:08.
Pushed by davidre into branch 'Plasma/5.21'.

Guard against null configloader in destructor

We do not necessarily have a config loader (invalid id or when the face does
not have any config options).
FIXED-IN:5.21.1


(cherry picked from commit 34eb6ce9b6c411107f9ccb843807176e80c80268)

M  +1    -1    faces/SensorFaceController.cpp

https://invent.kde.org/plasma/libksysguard/commit/b3fd4f2f3a4904d4c64168bff8b427c221d7fab1
Comment 4 jz23 2021-03-03 20:59:15 UTC
Seems to be fixed in 5.21.1.