Guard against null configloader in destructor

We do not necessarily have a config loader (invalid id or when the face does
not have any config options).
BUG:433431
FIXED-IN:5.21.1


(cherry picked from commit 34eb6ce9b6c411107f9ccb843807176e80c80268)